# SaveIt

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
migrations/: 0001_create_table.sql
src/: args.rs  config.rs  database.rs  main.rs  source.rs  ui.rs
src/ui/: list_page.rs  settings_page.rs  start_page.rs
