[package]
name = "SaveIt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
directories = "5.0.1"
eframe = "0.26.2"
egui = "0.26.2"
egui_extras = { version = "0.26.2", features = ["datepicker"] }
env_logger = "0.11.3"
serde = "1.0.197"
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio", "chrono"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
